--- a/config_docker/Dockerfile_manjaro
+++ b/config_docker/Dockerfile_manjaro
@@ -1,8 +1,9 @@
 ARG IMAGE=manjarolinux/base
 
 FROM $IMAGE
-ADD config_docker/pacman.conf /etc/pacman.conf
-RUN pacman -Syyu --noconfirm && pacman -S sfml boost opencv-samples opencv gcc freeglut \ 
+#ADD config_docker/pacman.conf /etc/pacman.conf
+RUN pacman -Syyu --noconfirm 
+RUN pacman -S sfml boost opencv-samples opencv gcc freeglut \ 
  cmake ninja qt5 hdf5 vtk opencl-icd-loader vulkan-icd-loader --noconfirm && pacman -Scc --noconfirm
 
 ARG UNAME=testuser
