--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -606,72 +606,73 @@ if (OPENCV_FOUND)
     add_dependencies(image_diff ${CUSTOM_LIBS})
 endif()
 
-enable_testing()
+if(Boost_FOUND)
+    enable_testing()
+    #Test getSchwarzschild
+    set(TEST_SCHWARZSCHILD test_getSchwarzschild)
+    add_executable(${TEST_SCHWARZSCHILD} ${lib_path}src/test/math/test_getSchwarzschild.cpp)
+    if(EXTERNAL_LIB)
+        add_dependencies(${TEST_SCHWARZSCHILD} ${EXTERNAL_LIB})
+    endif()
+    target_link_libraries(${TEST_SCHWARZSCHILD} ${Boost_LIBRARIES})
+    add_test(NAME ${TEST_SCHWARZSCHILD} COMMAND ${CMAKE_COMMAND} --build . --target ${TEST_SCHWARZSCHILD})
 
-#Test getSchwarzschild
-set(TEST_SCHWARZSCHILD test_getSchwarzschild)
-add_executable(${TEST_SCHWARZSCHILD} ${lib_path}src/test/math/test_getSchwarzschild.cpp)
-if(EXTERNAL_LIB)
-    add_dependencies(${TEST_SCHWARZSCHILD} ${EXTERNAL_LIB})
+    #Test getGravitationalAttraction
+    set(TEST_GA test_getGravitationalAttraction)
+    add_executable(${TEST_GA} ${lib_path}src/test/math/test_getGravitationalAttraction.cpp)
+    if(EXTERNAL_LIB)
+        add_dependencies(${TEST_GA} ${EXTERNAL_LIB})
+    endif()
+    target_link_libraries(${TEST_GA} ${Boost_LIBRARIES})
+    add_test(NAME ${TEST_GA} COMMAND ${TEST_GA})
+
+    #Test sphere
+    set(TEST_SPHERE test_sphere)
+    add_executable(${TEST_SPHERE} ${lib_path}src/test/math/test_sphere.cpp)
+    if(EXTERNAL_LIB)
+        add_dependencies(${TEST_SPHERE} ${EXTERNAL_LIB})
+    endif()
+    target_link_libraries(${TEST_SPHERE} ${Boost_LIBRARIES} quadmath)
+    add_test(NAME ${TEST_SPHERE} COMMAND ${TEST_SPHERE})
+
+    #Test cylinder
+    set(TEST_CYLINDER test_cylinder)
+    add_executable(${TEST_CYLINDER} ${lib_path}src/test/math/test_cylinder.cpp)
+    if(EXTERNAL_LIB)
+        add_dependencies(${TEST_CYLINDER} ${EXTERNAL_LIB})
+    endif()
+    target_link_libraries(${TEST_CYLINDER} ${Boost_LIBRARIES})
+    add_test(NAME ${TEST_CYLINDER} COMMAND ${TEST_CYLINDER})
+
+    #Test vector sort
+    set(TEST_VECTOR_SORT test_vector_sort)
+    add_executable(${TEST_VECTOR_SORT} ${lib_path}src/test/vector/test_vector_sort.cpp)
+    if(EXTERNAL_LIB)
+        add_dependencies(${TEST_VECTOR_SORT} ${EXTERNAL_LIB})
+    endif()
+    target_link_libraries(${TEST_VECTOR_SORT} ${Boost_LIBRARIES} vector)
+    add_test(NAME ${TEST_VECTOR_SORT} COMMAND ${TEST_VECTOR_SORT})
+
+    #Test vector copy
+    set(TEST_VECTOR_COPY test_vector_copy)
+    add_executable(${TEST_VECTOR_COPY} ${lib_path}src/test/vector/test_vector_copy.cpp)
+    if(EXTERNAL_LIB)
+        add_dependencies(${TEST_VECTOR_COPY} ${EXTERNAL_LIB})
+    endif()
+    target_link_libraries(${TEST_VECTOR_COPY} ${Boost_LIBRARIES} vector)
+    add_test(NAME ${TEST_VECTOR_COPY} COMMAND ${TEST_VECTOR_COPY})
+
+    #Test vector copy
+    set(TEST_VECTOR_MAX_SIMD test_vector_max_simd)
+    add_executable(${TEST_VECTOR_MAX_SIMD} ${lib_path}src/test/vector/test_vector_max_simd.cpp)
+    if(EXTERNAL_LIB)
+        add_dependencies(${TEST_VECTOR_MAX_SIMD} ${EXTERNAL_LIB})
+    endif()
+    target_link_libraries(${TEST_VECTOR_MAX_SIMD} ${Boost_LIBRARIES} vector)
+    add_test(NAME ${TEST_VECTOR_MAX_SIMD} COMMAND ${TEST_VECTOR_MAX_SIMD})
 endif()
-target_link_libraries(${TEST_SCHWARZSCHILD} ${Boost_LIBRARIES})
-add_test(NAME ${TEST_SCHWARZSCHILD} COMMAND ${CMAKE_COMMAND} --build . --target ${TEST_SCHWARZSCHILD})
 
-#Test getGravitationalAttraction
-set(TEST_GA test_getGravitationalAttraction)
-add_executable(${TEST_GA} ${lib_path}src/test/math/test_getGravitationalAttraction.cpp)
-if(EXTERNAL_LIB)
-    add_dependencies(${TEST_GA} ${EXTERNAL_LIB})
-endif()
-target_link_libraries(${TEST_GA} ${Boost_LIBRARIES})
-add_test(NAME ${TEST_GA} COMMAND ${TEST_GA})
-
-#Test sphere
-set(TEST_SPHERE test_sphere)
-add_executable(${TEST_SPHERE} ${lib_path}src/test/math/test_sphere.cpp)
-if(EXTERNAL_LIB)
-    add_dependencies(${TEST_SPHERE} ${EXTERNAL_LIB})
-endif()
-target_link_libraries(${TEST_SPHERE} ${Boost_LIBRARIES} quadmath)
-add_test(NAME ${TEST_SPHERE} COMMAND ${TEST_SPHERE})
-
-#Test cylinder
-set(TEST_CYLINDER test_cylinder)
-add_executable(${TEST_CYLINDER} ${lib_path}src/test/math/test_cylinder.cpp)
-if(EXTERNAL_LIB)
-    add_dependencies(${TEST_CYLINDER} ${EXTERNAL_LIB})
-endif()
-target_link_libraries(${TEST_CYLINDER} ${Boost_LIBRARIES})
-add_test(NAME ${TEST_CYLINDER} COMMAND ${TEST_CYLINDER})
-
-#Test vector sort
-set(TEST_VECTOR_SORT test_vector_sort)
-add_executable(${TEST_VECTOR_SORT} ${lib_path}src/test/vector/test_vector_sort.cpp)
-if(EXTERNAL_LIB)
-    add_dependencies(${TEST_VECTOR_SORT} ${EXTERNAL_LIB})
-endif()
-target_link_libraries(${TEST_VECTOR_SORT} ${Boost_LIBRARIES} vector)
-add_test(NAME ${TEST_VECTOR_SORT} COMMAND ${TEST_VECTOR_SORT})
-
-#Test vector copy
-set(TEST_VECTOR_COPY test_vector_copy)
-add_executable(${TEST_VECTOR_COPY} ${lib_path}src/test/vector/test_vector_copy.cpp)
-if(EXTERNAL_LIB)
-    add_dependencies(${TEST_VECTOR_COPY} ${EXTERNAL_LIB})
-endif()
-target_link_libraries(${TEST_VECTOR_COPY} ${Boost_LIBRARIES} vector)
-add_test(NAME ${TEST_VECTOR_COPY} COMMAND ${TEST_VECTOR_COPY})
-
-#Test vector copy
-set(TEST_VECTOR_MAX_SIMD test_vector_max_simd)
-add_executable(${TEST_VECTOR_MAX_SIMD} ${lib_path}src/test/vector/test_vector_max_simd.cpp)
-if(EXTERNAL_LIB)
-    add_dependencies(${TEST_VECTOR_MAX_SIMD} ${EXTERNAL_LIB})
-endif()
-target_link_libraries(${TEST_VECTOR_MAX_SIMD} ${Boost_LIBRARIES} vector)
-add_test(NAME ${TEST_VECTOR_MAX_SIMD} COMMAND ${TEST_VECTOR_MAX_SIMD})
-
-if (OPENSSL_FOUND)
+if (OPENSSL_FOUND AND Boost_FOUND)
     #Test crypto
     set(TEST_CRYPTO test_crypto)
     add_executable(${TEST_CRYPTO} ${lib_path}src/test/crypto/test_crypto.cpp)
@@ -691,40 +692,43 @@ if (OPENSSL_FOUND)
     add_test(NAME ${TEST_CRYPTO_AES} COMMAND ${TEST_CRYPTO_AES})
 endif()
 
-#Test C string
-set(TEST_REV_STR test_rev_str)
-add_executable(${TEST_REV_STR} ${lib_path}src/test/C/string_c/test_string.cpp)
-if(EXTERNAL_LIB)
-    add_dependencies(${TEST_REV_STR} ${EXTERNAL_LIB})
-endif()
-target_link_libraries(${TEST_REV_STR} ${Boost_LIBRARIES} string_c)
-add_test(NAME ${TEST_REV_STR} COMMAND ${TEST_REV_STR})
 
-set(TEST_IS_NUM test_my_isnum)
-add_executable(${TEST_IS_NUM} ${lib_path}src/test/C/string_is/test_my_isnum.cpp)
-if(EXTERNAL_LIB)
-    add_dependencies(${TEST_IS_NUM} ${EXTERNAL_LIB})
-endif()
-target_link_libraries(${TEST_IS_NUM} ${Boost_LIBRARIES} string_is_c)
-add_test(NAME ${TEST_IS_NUM} COMMAND ${TEST_IS_NUM})
+if(Boost_FOUND)
+    #Test C string
+    set(TEST_REV_STR test_rev_str)
+    add_executable(${TEST_REV_STR} ${lib_path}src/test/C/string_c/test_string.cpp)
+    if(EXTERNAL_LIB)
+        add_dependencies(${TEST_REV_STR} ${EXTERNAL_LIB})
+    endif()
+    target_link_libraries(${TEST_REV_STR} ${Boost_LIBRARIES} string_c)
+    add_test(NAME ${TEST_REV_STR} COMMAND ${TEST_REV_STR})
 
-set(TEST_STR_IS_NUM test_my_str_isnum)
-add_executable(${TEST_STR_IS_NUM} ${lib_path}src/test/C/string_is/test_my_str_isnum.cpp)
-if(EXTERNAL_LIB)
-    add_dependencies(${TEST_STR_IS_NUM} ${EXTERNAL_LIB})
-endif()
-target_link_libraries(${TEST_STR_IS_NUM} ${Boost_LIBRARIES} string_is_c)
-add_test(NAME ${TEST_STR_IS_NUM} COMMAND ${TEST_STR_IS_NUM})
+    set(TEST_IS_NUM test_my_isnum)
+    add_executable(${TEST_IS_NUM} ${lib_path}src/test/C/string_is/test_my_isnum.cpp)
+    if(EXTERNAL_LIB)
+        add_dependencies(${TEST_IS_NUM} ${EXTERNAL_LIB})
+    endif()
+    target_link_libraries(${TEST_IS_NUM} ${Boost_LIBRARIES} string_is_c)
+    add_test(NAME ${TEST_IS_NUM} COMMAND ${TEST_IS_NUM})
+
+    set(TEST_STR_IS_NUM test_my_str_isnum)
+    add_executable(${TEST_STR_IS_NUM} ${lib_path}src/test/C/string_is/test_my_str_isnum.cpp)
+    if(EXTERNAL_LIB)
+        add_dependencies(${TEST_STR_IS_NUM} ${EXTERNAL_LIB})
+    endif()
+    target_link_libraries(${TEST_STR_IS_NUM} ${Boost_LIBRARIES} string_is_c)
+    add_test(NAME ${TEST_STR_IS_NUM} COMMAND ${TEST_STR_IS_NUM})
 
 
-#Test power
-set(TEST_POWER test_power)
-add_executable(${TEST_POWER} ${lib_path}src/test/math/test_power.cpp)
-if(EXTERNAL_LIB)
-    add_dependencies(${TEST_POWER} ${EXTERNAL_LIB})
+    #Test power
+    set(TEST_POWER test_power)
+    add_executable(${TEST_POWER} ${lib_path}src/test/math/test_power.cpp)
+    if(EXTERNAL_LIB)
+        add_dependencies(${TEST_POWER} ${EXTERNAL_LIB})
+    endif()
+    target_link_libraries(${TEST_POWER} ${Boost_LIBRARIES})
+    add_test(NAME ${TEST_POWER} COMMAND ${TEST_POWER})
 endif()
-target_link_libraries(${TEST_POWER} ${Boost_LIBRARIES})
-add_test(NAME ${TEST_POWER} COMMAND ${TEST_POWER})
 #add_test(NAME ${TEST_POWER} COMMAND ${CMAKE_COMMAND} --build . --target ${TEST_POWER})
 
 #add_custom_command(
