Add working CRC32 in OpenCL !

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -635,10 +635,11 @@ if(OpenCL_FOUND)
     add_executable(opencl_test2 ${OPENCL_TEST2})
     target_link_libraries(opencl_test2 PRIVATE ${OpenCL_LIBRARY})
     add_dependencies(opencl_test2 ${CUSTOM_LIBS})
-
-    add_executable(opencl_crc32 ${OPENCL_CRC32})
-    target_link_libraries(opencl_crc32 PRIVATE ${OpenCL_LIBRARY})
-    add_dependencies(opencl_crc32 ${CUSTOM_LIBS})
+    if (OPENSSL_FOUND)
+        add_executable(opencl_crc32 ${OPENCL_CRC32})
+        target_link_libraries(opencl_crc32 PRIVATE ${OpenCL_LIBRARY} my_crypto)
+        add_dependencies(opencl_crc32 ${CUSTOM_LIBS})
+    endif()
 endif()
 
 add_executable(parse_csv ${PARSE_CSV})
