Add new CRC algo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -637,7 +637,7 @@ if(OpenCL_FOUND)
     add_dependencies(opencl_test2 ${CUSTOM_LIBS})
     if (OPENSSL_FOUND)
         add_executable(opencl_crc32 ${OPENCL_CRC32})
-        target_link_libraries(opencl_crc32 PRIVATE ${OpenCL_LIBRARY} my_crypto)
+        target_link_libraries(opencl_crc32 PRIVATE ${OpenCL_LIBRARY} my_crypto time)
         add_dependencies(opencl_crc32 ${CUSTOM_LIBS})
     endif()
 endif()
