--- a/lib/math/CMakeLists.txt
+++ b/lib/math/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.11)
 
 project(math C CXX)
 
+
 set(SRCS
 	getGravitationalAttraction_imp.hpp
 	getSchwarzschild_imp.hpp
@@ -38,5 +39,6 @@ set(HEADERS
 #add_library(math_static STATIC ${SRCS} ${HEADERS})
 add_library(math SHARED ${SRCS} ${HEADERS})
 
-#install (TARGETS math DESTINATION bin)
-#install (FILES math.h DESTINATION include)
+
+install(TARGETS math LIBRARY DESTINATION lib
+                      ARCHIVE DESTINATION lib)
