--- a/config_docker/Dockerfile_fedora
+++ b/config_docker/Dockerfile_fedora
@@ -6,7 +6,7 @@ RUN dnf upgrade -y --refresh && dnf install -y gcc boost opencv opencv-devel cma
     git freeglut-devel xorg-x11-apps libudev-devel libXrandr libXrandr-devel libX11 \
     qt5-qtbase-devel qt5-qtbase openal-soft vorbis-tools libvorbis openal-soft-devel openssl SFML-devel \
     boost-devel openssl-devel qt5-qtmultimedia-devel qt5-qtquickcontrols2-devel && dnf autoremove -y
-RUN dnf install -y qt5-qtmultimedia qt5-qtquickcontrols2 qt5-qtquickcontrols
+RUN dnf install -y qt5-qtmultimedia qt5-qtquickcontrols2 qt5-qtquickcontrols cppcheck
 
 ARG UNAME=testuser
 ARG UID=1000
